Add default values to select tags

--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
             <div class="bg-div">
                 <p>Background color</p>
                 <div><label for="tableBgColor">Table background</label>
-                    <input type="color" id="tableBgColor" name="tableBgColor" value="lightblue"></div>
+                    <input type="color" id="tableBgColor" name="tableBgColor" value="#6666ff"></div>
                 <div> <label for="headBgColor">Head background</label>
-                    <input type="color" id="headBgColor" name="headBgColor" value="lightgreen"></div>
+                    <input type="color" id="headBgColor" name="headBgColor" value="#ADD8E6"></div>
                 <div><label for="bodyBgColor">body background</label>
-                    <input type="color" id="bodyBgColor" name="bodyBgColor" value="yellow"></div>
+                    <input type="color" id="bodyBgColor" name="bodyBgColor" value="#ffffb2"></div>
 
             </div>
             <div class="border-font-color">
                 <div><label for="borderColor">Border color</label>
-                    <input type="color" id="borderColor" name="borderColor" value="grey"></div>
+                    <input type="color" id="borderColor" name="borderColor" value="#4c4c4c"></div>
                 <div><label for="fontColor">Font color</label>
-                    <input type="color" id="fontColor" name="fontColor" value="black"></div>
+                    <input type="color" id="fontColor" name="fontColor" value="#262626"></div>
             </div>
             <div>
                 <label for="fontType">Font type</label>
                 <select id="fontType">
                     <option value="">----Font type----</option>
-                    <option value="Arial">Arial</option>
+                    <option value="Arial" selected="selected">Arial</option>
                     <option value="Times New Roman">Times New Roman</option>
                     <option value="Courier New">Courier New</option>
                     <option value="Verdana">Verdana</option>
@@ -55,7 +55,7 @@
                 <label for="fontSize">Font size</label>
                 <select id="fontSize">
                     <option value="">----Font size----</option>
-                    <option value="medium">medium</option>
+                    <option value="medium" selected="selected">medium</option>
                     <option value="xx-small">xx-small</option>
                     <option value="x-small">x-small</option>
                     <option value="small">small</option>
@@ -66,7 +66,7 @@
                 <label for="AlignForText">textAlign</label>
                 <select id="AlignForText">
                     <option value="">----Text align----</option>
-                    <option value="center">center</option>
+                    <option value="center" selected="selected">center</option>
                     <option value="left">left</option>
                     <option value="right">right</option>
                     <option value="justify">justify</option>
