Make user input and input div friendly

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div><label for="fontColor">Font color</label>
                     <input type="color" id="fontColor" name="fontColor" value="#262626"></div>
             </div>
-            <div>
+            <div class="selectsFont">
                 <label for="fontType">Font type</label>
                 <select id="fontType">
                     <option value="">----Font type----</option>
